     * increased the HP of the Goblin Rouser from 26 to 31
     * increased the melee damage of the Goblin Rouser from 5-3 to 6-3
   * adapted WML to use [if] statements to differentiate hit and miss frames
   * new traits
     * healthy (+3HP, +4 rest healing), fearless (ignore unfavorable ToD)
   * new units
     * added the Armageddon Drake (not used in any mainline eras)
 * user interface
   * use "Save Replay" instead of "Save Game" when asking to save a replay (bug #7256)
   * fix enemy Gold show twice in debug mode in status table (bug #6895)
   * added an option to hide minimaps in the multiplayer lobby
   * added menu items for saving the current map
   * added turbo speed setting and changed ui accordingly
   * turn bell moved to sound tab in preferences
   * new volume slider for the turn bell
   * disabled inactive sliders instead of hiding them
   * sliders can be adjusted with keyboard (left and right arrow)
   * sidebar reports related to gold, units, villages and time get greyed out
     during other team's turns
   * improve the tiny gui support (resolution of 320x240 pixels)
   * when sighting friendly units, the message is now blue
   * show leader name in statistics title (patch #604, FR #6932)
   * initial support for GP2X controls
   * show leader's name and colour at status table even when that team is fogged
     (patch #605)A
   * changed the zoom hotkeys from 'z', 'x' and 'c' to '+', '-' and '0'
   * fix the completion when controlling multiple sides (bug #8101, patch #653)
   * add a friend list in MP lobby, they will display a special icon in lobby,
     and you can be warned when they join the lobby even when not receiving
     lobby joins
   * added option to have random time of day in begin of multiplayer game
 * WML engine
   * added prerecruit event that takes place after the unit is created but
     before it is displayed.
   * added ability to define color ranges and palettes in scenario, units, and