@@ -99,6 +99,7 @@ Special Notes:"+{SPECIAL_NOTES_BERSERK}
 		[/animation]
 	[/attack]
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		start_time=0
 		[frame]
 			duration=100
