@@ -120,6 +120,7 @@ Special Notes:"+{SPECIAL_NOTES_STEADFAST}
 	[/attack]
 	{DEFENSE_ANIM "units/dwarves/guard-defend.png" "units/dwarves/guard.png" {SOUND_LIST:DWARF_HIT} }
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		start_time=0
 		[frame]
 			duration=100
