@@ -237,6 +237,7 @@
 		{DEFENSE_ANIM_RANGE "units/elves-wood/archer+female-bow-defend.png" "units/elves-wood/archer+female-bow.png" {SOUND_LIST:ELF_FEMALE_HIT} ranged}
 	[/female]
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		start_time=0
 		[frame]
 			duration=100
