@@ -148,6 +148,7 @@ Special Notes:"+{SPECIAL_NOTES_POISON}
 		[/animation]
 	[/attack]
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		start_time=0
 		[frame]
 			duration=100
