@@ -276,6 +276,7 @@ Some speculate that the existence of these creatures is the beginning of a failu
 
 	[/attack]
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		start_time=0
 		[frame]
 			duration=150
