@@ -79,6 +79,7 @@ Wolves, likely, could never support the weight of a man in plate, but a goblin i
 		[/animation]
 	[/attack]
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		start_time=0
 		[frame]
 			duration=100
