@@ -144,6 +144,7 @@
 		[/animation]
 	[/attack]
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		start_time=0
 		[frame]
 			duration=100
