@@ -169,6 +169,7 @@ Special Notes:"+{SPECIAL_NOTES_SKIRMISHER}
 		[/animation]
 	[/attack]
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		start_time=0
 		[frame]
 			duration=100
