@@ -258,6 +258,7 @@ Special Notes:"+{SPECIAL_NOTES_FIRSTSTRIKE}
 		[/animation]
 	[/attack]
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		start_time=0
 		[frame]
 			duration=100
