@@ -107,6 +107,7 @@ Special Notes:"+{SPECIAL_NOTES_LEADERSHIP}
 		[/animation]
 	[/attack]
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		[frame]
 			begin=0
 			end=100
