@@ -118,6 +118,7 @@
 		[/animation]
 	[/attack]
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		[frame]
 			begin=0
 			end=1000
