@@ -138,6 +138,7 @@
 		[/attack]
 	[/female]
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		[frame]
 			begin=0
 			end=100
