@@ -154,6 +154,7 @@
 		[/attack]
 	[/female]
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		start_time=0
 		[frame]
 			duration=100
