@@ -65,6 +65,7 @@
 	[/attack]
 	{DEFENSE_ANIM "units/ogres/ogre-defend.png" "units/ogres/ogre.png" ogre-hit.wav }
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		[frame]
 			begin=0
 			end=100
