@@ -177,6 +177,7 @@ Special Notes:"+{SPECIAL_NOTES_SUBMERGE}
 		[/frame]
 	[/death]
 	[idle_anim]
+		{STANDARD_IDLE_FILTER}
 		[frame]
 			begin=0
 			end=100
