@@ -343,3 +343,21 @@
         image_diagonal="projectiles/fireball-nw-2.png"
     [/missile_frame]
 #enddef
+
+
+#this macro is called on top of every idle animation, to provide a standard set of
+#conditions to play the idle animation
+
+#define STANDARD_IDLE_FILTER
+
+#poisoned units hould have no idle animation
+[unit_filter]
+	[not]
+		[wml_filter]
+			[status]
+				poisoned="yes"
+			[/status]
+		[/wml_filter]
+	[/not]
+[/unit_filter]
+#enddef
