@@ -108,6 +108,7 @@ Detailed changelog and internal changes:
      * healthy (+3HP, +4 rest healing), fearless (ignore unfavorable ToD)
    * new units
      * added the Armageddon Drake (not used in any mainline eras)
+   * added a generic macro to have a standard filter for all idle anim
  * user interface
    * use "Save Replay" instead of "Save Game" when asking to save a replay (bug #7256)
    * fix enemy Gold show twice in debug mode in status table (bug #6895)
